crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__harvest__harvest_list_empty.snap
---
source: crates/engram-cli/tests/cli/snapshot/harvest.rs
expression: "f.run(&[\"harvest\", \"list\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] harvest list
exit: 0
--- stdout ---
{
  "scope": [
    "[PROJECT]"
  ],
  "sessions": []
}
--- stderr ---
