crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__harvest__harvest_list_include_harvested.snap
---
source: crates/engram-cli/tests/cli/snapshot/harvest.rs
expression: "f.run(&[\"harvest\", \"list\", \"--include-harvested\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] harvest list --include-harvested
exit: 0
--- stdout ---
{
  "scope": [
    "[PROJECT]"
  ],
  "sessions": [
    {
      "already_harvested": false,
      "assistant_turns": 0,
      "bytes": 177,
      "cwd": "[PROJECT]",
      "ended_at": "[TIMESTAMP]",
      "first_prompt": "What is the default digest budget?",
      "git_branch": "main",
      "session_id": "session-beta",
      "started_at": "[TIMESTAMP]",
      "user_turns": 1
    },
    {
      "already_harvested": true,
      "assistant_turns": 2,
      "bytes": 892,
      "cwd": "[PROJECT]",
      "ended_at": "[TIMESTAMP]",
      "first_prompt": "Why does the daemon reap while a session is still open?",
      "git_branch": "feat/harvest",
      "session_id": "session-alpha",
      "started_at": "[TIMESTAMP]",
      "user_turns": 2
    }
  ]
}
--- stderr ---
