crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__harvest__harvest_list_since_invalid.snap
---
source: crates/engram-cli/tests/cli/snapshot/harvest.rs
expression: "f.run(&[\"harvest\", \"list\", \"--since\", \"yesterday-ish\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] harvest list --since yesterday-ish
exit: 1
--- stdout ---
--- stderr ---
Error: invalid --since value: yesterday-ish
